# misis_edu_2_semester

./: README.md
akperov_e_b/: .build.bat  .gitignore  CMakeLists.txt  text
akperov_e_b/data/example_configs/: demo_1.json  demo_2.json  test_1.json  test_2.json
akperov_e_b/data/results/: example_of_output.txt
akperov_e_b/prj.cw/: CMakeLists.txt
akperov_e_b/prj.cw/examples/: CMakeLists.txt  trirastr_demo.cpp  trirastr_demoVu.cpp  trirastr_test.cpp  trirastr_testVu.cpp
akperov_e_b/prj.cw/trirastr/: CMakeLists.txt  Doxyfile  trirastr.cpp
akperov_e_b/prj.cw/trirastr/include/trirastr/: trirastr.hpp
akperov_e_b/prj.lab/: CMakeLists.txt
akperov_e_b/prj.lab/arrayd/: arrayd.cpp
akperov_e_b/prj.lab/arrayd/include/arrayd/: arrayd.hpp  derevashkaforarrayd.txt
akperov_e_b/prj.lab/arrayt/: CMakeLists.txt  arrayt.cpp
akperov_e_b/prj.lab/arrayt/include/arrayt/: arrayt.hpp
akperov_e_b/prj.lab/geo2d/: geo2d.cpp
akperov_e_b/prj.lab/geo2d/include/geo2d/: geo2d.hpp
akperov_e_b/prj.lab/matrixs/: matrixs.cpp
akperov_e_b/prj.lab/matrixs/include/matrixs/: matrixs.hpp
akperov_e_b/prj.lab/orto/: orto.20230519  orto.cpp  orto.txt
akperov_e_b/prj.lab/rational/: rational.cpp
akperov_e_b/prj.lab/rational/include/rational/: rational.hpp
akperov_e_b/prj.lab/trirastr/: Doxyfile  trirastr.cpp
akperov_e_b/prj.lab/trirastr/include/trirastr/: trirastr.hpp
akperov_e_b/prj.test/: CMakeLists.txt  arrayd_test.cpp  arrayt_test.cpp  geo2d_test.cpp  matrixs_test.cpp  rational_test.cpp  rational_testeesese.cpp  trirastr_demo1.cpp  trirastr_demo2.cpp  trirastr_test1.cpp  trirastr_test2.cpp
